video call done

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -36,6 +36,9 @@
                 <a href="{% url 'meds:profile' %}" class='btn btn-outline-primary'>Profile</a>
          {% endif %}
         </nav> {% endcomment %}
+        <div id="notification-container" class="position-fixed top-0 end-0 p-3" style="z-index: 1050;">
+            <!-- Notifications will be dynamically added here -->
+        </div>
 
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
